* Release 0.1.0
	* Fixed Bug #1: Include stand alone 7zip and Unrar