@@ -77,18 +77,17 @@ func main() {
 		"static/pako.min.js",
 		"static/jquery-2.1.3.min.js",
 		"static/web_socket.js",
-		"client/identify_dreamcast_games/db_dreamcast_official_eu.json",
-		"client/identify_dreamcast_games/db_dreamcast_official_jp.json",
-		"client/identify_dreamcast_games/db_dreamcast_official_us.json",
-		"client/identify_dreamcast_games/db_dreamcast_unofficial.json",
-		"client/identify_dreamcast_games/identify_dreamcast_games.exe",
-		"client/identify_playstation2_games/db_playstation2_official_as.json",
-		"client/identify_playstation2_games/db_playstation2_official_au.json",
-		"client/identify_playstation2_games/db_playstation2_official_eu.json",
-		"client/identify_playstation2_games/db_playstation2_official_jp.json",
-		"client/identify_playstation2_games/db_playstation2_official_ko.json",
-		"client/identify_playstation2_games/db_playstation2_official_us.json",
-		"client/identify_playstation2_games/identify_playstation2_games.exe",
+		"client/identify_games/db_dreamcast_official_eu.json",
+		"client/identify_games/db_dreamcast_official_jp.json",
+		"client/identify_games/db_dreamcast_official_us.json",
+		"client/identify_games/db_dreamcast_unofficial.json",
+		"client/identify_games/db_playstation2_official_as.json",
+		"client/identify_games/db_playstation2_official_au.json",
+		"client/identify_games/db_playstation2_official_eu.json",
+		"client/identify_games/db_playstation2_official_jp.json",
+		"client/identify_games/db_playstation2_official_ko.json",
+		"client/identify_games/db_playstation2_official_us.json",
+		"client/identify_games/identify_games.exe",
 		"licenses/license_7zip",
 		"licenses/license_identify_dreamcast_games",
 		"licenses/license_identify_playstation2_games",
