@@ -5,6 +5,6 @@ import py2exe
 
 setup(
 	options = {'py2exe': {'bundle_files': 1}},
-	console=['identify_playstation2_games.py'],
+	console=['identify_games.py'],
 	zipfile=None
 )
